--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://ssl.gstatic.com/calendar/images/dynamiclogo_2020q4/calendar_1_2x.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-app</title>
+    <title>Calendar</title>
   </head>
   <body>
     <div id="root"></div>
